Cards alignment issue

--- a/src/assets/styles/04-components/home-blocks.scss
+++ b/src/assets/styles/04-components/home-blocks.scss
@@ -9,7 +9,7 @@
       @apply rtl:pl-8 ltr:pr-8;
     }
 
-    h2{ 
+    h2{
       @apply text-lg font-bold relative leading-[1.2];
     }
 
@@ -104,7 +104,7 @@
   }
 }
 
-.has-overlay{ 
+.has-overlay{
   &:after{
     @apply content-[''] h-full w-full bg-black/60 absolute top-0 left-0 transition-colors duration-300;
   }
@@ -245,7 +245,10 @@
   &.two-cols {
     .inner {
       display: grid;
-      @apply lg:grid-cols-2 gap-5;
+      @apply lg:grid-cols-2 gap-5 items-end;
+      .s-product-card-entry{
+        @apply min-h-[170px];
+      }
     }
 
     .product-entry__image {
